# azure-repos-scan

./: .env.example  .gitignore  .prettierignore  README.md  eslint.config.mjs  forge.config.ts  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: copilot-skills.md
.github/skills/python-strict-dev/: SKILL.md
.github/skills/python-strict-dev/assets/: pyproject.toml.template
.github/skills/python-strict-dev/references/: secure-env.md  testing.md  type-checking.md
scripts/: build.py
src/azure_repos_scan/: __init__.py  __main__.py  main.py
src/azure_repos_scan/application/: __init__.py  use_cases.py
src/azure_repos_scan/domain/: __init__.py  exceptions.py  models.py  ports.py
src/azure_repos_scan/infrastructure/: __init__.py  config.py
src/azure_repos_scan/infrastructure/adapters/: __init__.py  azure_devops_client.py
src/azure_repos_scan/infrastructure/persistence/: __init__.py  query_store.py  settings_store.py
src/azure_repos_scan/ui/: __init__.py  app.py  styles.py
src/azure_repos_scan/ui/pages/: __init__.py  dashboard_page.py  scanner_page.py
src/azure_repos_scan/ui/widgets/: __init__.py  kpi_card.py  repo_tree_table.py  sidebar.py
src/main/: index.ts  ipc-handlers.ts  preload.ts
src/main/application/: index.ts
src/main/application/use-cases/: build-dashboard-data.ts  export-results.ts  list-projects.ts  list-repositories.ts  scan-organization.ts  search-dotnet-projects.ts
src/main/domain/: exceptions.ts  index.ts  models.ts  ports.ts
src/main/infrastructure/: config.ts  index.ts
src/main/infrastructure/adapters/: azure-devops-client.ts  index.ts
src/main/infrastructure/persistence/: index.ts  query-store.ts  settings-store.ts
src/renderer/: App.tsx  globals.css  index.html  main.tsx
src/renderer/components/: error-boundary.tsx  kpi-card.tsx  layout.tsx  sidebar.tsx  skeleton.tsx  titlebar.tsx  toast-provider.tsx
src/renderer/lib/: ipc-client.ts  version-utils.ts
src/renderer/pages/dashboard/: dashboard-page.tsx  repo-tree-table.tsx
src/renderer/pages/results/: results-page.tsx
src/renderer/pages/scanner/: branch-selector.tsx  (+5 more)
src/renderer/stores/: dashboard-store.ts  nav-store.ts  scanner-store.ts
src/renderer/types/: electron.d.ts
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  smoke.test.ts  test_code_search.py  test_dashboard.py  test_models.py  test_query_store.py  test_use_cases.py
tests/unit/application/: build-dashboard-data.test.ts  export-results.test.ts  fakes.ts  search-dotnet-projects.test.ts
tests/unit/domain/: exceptions.test.ts  models.test.ts
tests/unit/infrastructure/: query-store.test.ts  settings-store.test.ts
(+3 files in other folders)
