[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure-repos-scan"
version = "0.1.0"
description = "Escáner de repositorios de Azure DevOps con interfaz gráfica"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "pyside6>=6.7",
    "plotly>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "pyinstaller>=6.0",
    "ruff>=0.4",
]

[project.scripts]
azure-repos-scan = "azure_repos_scan.main:main"

# ============================================================
# Pyright / Pylance — Modo estricto
# ============================================================
[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
extraPaths = ["src"]
reportMissingTypeStubs = "warning"
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportDeprecated = "warning"
reportMissingParameterType = "error"
reportMissingReturnType = "error"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportPrivateUsage = "error"

# ============================================================
# Ruff — Linter y formateador
# ============================================================
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit (seguridad)
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print (prohibir print en producción)
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "ANN101",  # missing-type-self (deprecated)
    "ANN102",  # missing-type-cls  (deprecated)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Permitir assert en tests

# ============================================================
# Pytest
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "unit: Pruebas unitarias",
    "integration: Pruebas de integración",
]
